<resources>
    <string name="app_name">CarBnb</string>
    <string name="welcome_message">Welcome to our App!\n Come to join yourself on CarBnb Community</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="country">Country</string>
    <string name="terms_conditions">I agree with all the therms and conditions of this app</string>
    <string name="google_account">Or log in with your Google Account:</string>
    <string name="keep_connection">Keep me connected</string>
    <string name="username">Username</string>
    <string name="distance">Distance</string>
    <string name="cars_near_you">Cars near you</string>
    <string name="useremail">UserEmail@</string>
    <string name="my_profile">My Profile</string>
    <string name="advertise_here">advertise here</string>
    <string name="save_changes">Save Changes</string>
    <string name="delete_account">Delete Account</string>
    <string name="local">Local</string>
    <string name="description">Description</string>
    <string name="rent">Rent</string>
    <string name="_50_00">$50,00</string>
    <string name="scheduling">Scheduling</string>
    <string name="location_text">Location Text</string>
    <string name="select_the_desired_date">Select the desired date</string>
    <string name="day_month">Day / Month</string>
    <string name="description_example">Old but gold car, available for the weekends and holidays</string>
    <string name="digit_message">Digit Message</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="advertise">Advertise</string>
    <string name="type_the_model_of_your_car">Type the model of your car</string>
    <string name="type_description">Type description</string>
    <string name="google_maps_view">Google Maps View</string>
    <string name="type_car_location">Type car location</string>
    <string name="type_the_rental_daily_rate">Type the rental daily rate</string>
    <string name="post_advertise">Post Advertise</string>
    <string name="my_advertises">My Advertises</string>
    <string name="comments">Comments</string>
    <string name="feed">Feed</string>
    <string name="history">History</string>
    <string name="list_your_car">List your car</string>
    <string name="create_advertisement">Create Advertisement</string>
    <string name="price">Price</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="view_messages">View messages</string>
    <string name="author_name">Author name</string>
    <string name="dd_mm_yyy_hh_mm_ss">dd/MM/yyy hh:mm:ss</string>
    <string name="hi_i_would_like_to_rent_for_this_holiday">Hi I would like to rent for this holiday</string>
    <string name="type_your_message_here">Type your message here</string>
    <string name="send">Send</string>
    <string name="carbnb">CARBNB</string>
    <string name="messages">Messages</string>

</resources>