<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/darkgray_background_color"
    tools:context=".ui.SchedulingActivity">

    <LinearLayout
        android:id="@+id/topnavgator"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/gobackarrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_backarrow"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="3"
            android:text="@string/scheduling"
            android:padding="5dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            />
        <ImageView
            android:id="@+id/logoutbutton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_poweroff"/>

    </LinearLayout>

    <TextView
        android:id="@+id/car_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Car name"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_margin="10dp"/>

    <ImageView
        android:id="@+id/car_picture"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_car_photo"/>

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_text"
        android:textColor="@color/sixty_opacity_white"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/mapsButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/google_maps_view"
        android:textSize="11sp"/>

    <TextView
        android:id="@+id/owner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Car Owner"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@color/sixty_opacity_white"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_example"
        android:textColor="@color/sixty_opacity_white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_the_desired_date"
        android:textColor="@color/sixty_opacity_white"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/calendarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_month"
        android:textColor="@color/white"
        android:background="@drawable/bg_button"
        />

    <EditText
        android:id="@+id/userMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/digit_message"
        android:textAlignment="viewStart"
        android:padding="15dp"
        android:inputType="textMultiLine"
        android:lines="3"
        android:background="@drawable/bg_edittext"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/bg_greenbutton"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/bg_redbutton"/>

    </LinearLayout>
</LinearLayout>