<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="5dp"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="20dp"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightgray_background_color">

        <ImageView
            android:id="@+id/carImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_car_photo" />

        <TextView
            android:id="@+id/carName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/carImage"
            android:layout_marginTop="20dp"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/carImage"
            android:layout_below="@id/carName"
            android:layout_marginTop="3dp"
            android:text="@string/local"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/carImage"
            android:layout_below="@id/location"
            android:layout_marginTop="3dp"
            android:text="@string/day_month"
            android:textColor="@color/sixty_opacity_white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/carImage"
            android:layout_below="@id/date"
            android:layout_marginTop="1dp"
            android:text="@string/price"
            android:textColor="@color/green"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="300dp"
            android:layout_below="@id/carImage"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="15dp"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/viewButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_alignParentStart="true"
            android:layout_below="@id/descriptionText"
            android:text="@string/view_messages" />

        <Button
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/viewButton"
            android:layout_below="@id/descriptionText"
            android:layout_margin="5dp"
            android:text="@string/edit" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/descriptionText"
            android:layout_alignParentEnd="true"
            android:layout_margin="8dp"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:background="@drawable/bg_redbutton"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>