<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/darkgray_background_color"
    tools:context=".ui.AdvertiseActivity">

    <LinearLayout
        android:id="@+id/topnavgator"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/gobackarrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_backarrow"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/advertise"
            android:layout_marginStart="30dp"
            android:textColor="@color/white"
            android:layout_weight="3"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:textAlignment="viewEnd"
            android:text="@string/carbnb"
            android:textColor="@color/light_orange"
            android:textSize="18sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/car_picture"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_car_photo"
        android:background="@color/cardview_dark_background"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/carName"
        android:background="@drawable/bg_edittext"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_the_model_of_your_car"
        android:inputType="text"
        android:maxWidth="200dp"
        android:textColorHint="@color/sixty_opacity_white"
        android:textColor="@color/white" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/locationText"
        android:background="@drawable/bg_edittext"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_car_location"
        android:inputType="text"
        android:maxWidth="200dp"
        android:textColorHint="@color/sixty_opacity_white"
        android:textColor="@color/white"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/price"
        android:background="@drawable/bg_edittext"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="40dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/type_the_rental_daily_rate"
        android:inputType="number"
        android:maxLength="5"
        android:textColorHint="@color/sixty_opacity_white"
        android:textColor="@color/white" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/descriptionText"
        android:background="@drawable/bg_edittext"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="40dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_description"
        android:inputType="textMultiLine"
        android:lines="3"
        android:textColorHint="@color/sixty_opacity_white"
        android:textColor="@color/white" />

    <ProgressBar
        android:id="@+id/loadingIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_advertise"
        android:textColor="@color/white"
        android:background="@drawable/bg_greenbutton"/>

</LinearLayout>