<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:flow_verticalBias="0.30"
    tools:context=".ui.SingUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/singup_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:padding="28dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameTxt"
                android:background="@drawable/bg_edittext"
                android:layout_marginVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textEmailAddress"
                android:maxWidth="200dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailTxt"
                android:background="@drawable/bg_edittext"
                android:layout_marginVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxWidth="200dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordTxt"
                android:background="@drawable/bg_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxWidth="200dp"
                android:textColorHint="@color/white"
                android:textColor="@color/white" />

            <CheckBox
                android:id="@+id/therms_conditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/terms_conditions"
                android:checked="true"
                android:layout_marginTop="8dp"
                />
        </LinearLayout>

        <Button
            android:id="@+id/singup_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/singup_layout"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:background="@drawable/bg_button"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>