<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileActivity"
    android:background="@color/darkgray_background_color">

    <LinearLayout
        android:id="@+id/topnavgator"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/gobackarrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_backarrow"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/my_profile"
            android:textColor="@color/white"
            android:layout_weight="3"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/logoutbutton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_poweroff"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/textsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/topnavgator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="40dp"
        android:gravity="center_horizontal"
        >

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_noprofile"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:background="@drawable/bg_edittext"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:maxWidth="200dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:background="@drawable/bg_edittext"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/email"
            android:maxWidth="200dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:background="@drawable/bg_edittext"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:maxWidth="200dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/saveChangesButton"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_button"
            android:textColor="@color/white"
            android:padding="15dp"
            android:text="@string/save_changes"/>

        <Button
            android:id="@+id/deleteAccountButton"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_redbutton"
            android:textColor="@color/white"
            android:padding="15dp"
            android:text="@string/delete_account"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>