<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="5dp"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="20dp"
    android:layout_gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@color/lightgray_background_color">

        <TextView
            android:id="@+id/authorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_name"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dd_mm_yyy_hh_mm_ss"
            android:textColor="@color/sixty_opacity_white"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="10dp"/>

        <TextView
            android:id="@+id/messageText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/authorName"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/bg_edittext"
            android:padding="5dp"
            android:text="@string/hi_i_would_like_to_rent_for_this_holiday"
            android:textColor="@color/white" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>