<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    card_view:cardBackgroundColor="@color/sixty_opacity_white"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="20dp"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:background="@color/lightgray_background_color"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <ImageView
            android:id="@+id/carImage"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:minWidth="300dp"
            android:src="@drawable/ic_car_photo"
        />

        <TextView
            android:id="@+id/localText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/local"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="10dp"
            android:textSize="20sp"
            android:text="@string/_50_00"
            android:textColor="@color/light_orange"
            />

    </LinearLayout>
</androidx.cardview.widget.CardView>